a start on intro

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -533,14 +533,51 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   title        = {Lazy Functional State Threads},
   year         = {1994},
   isbn         = {089791662X},
-  publisher    = {Association for Computing Machinery},
+  publisher    = {ACM},
   address      = {New York, NY, USA},
-  url          = {https://doi.org/10.1145/178243.178246},
   doi          = {10.1145/178243.178246},
-  abstract     = {Some algorithms make critical internal use of updatable state, even though their external specification is purely functional. Based on earlier work on monads, we present a way of securely encapsulating stateful computations that manipulate multiple, named, mutable objects, in the context of a non-strict, purely-functional language.The security of the encapsulation is assured by the type system, using parametricity. Intriguingly, this parametricity requires the provision of a (single) constant with a rank-2 polymorphic type.},
-  booktitle    = {Proceedings of the ACM SIGPLAN 1994 Conference on Programming Language Design and Implementation},
-  pages        = {24–35},
+  booktitle    = {Proc. \ of {PLDI}},
+  pages        = {24--35},
   numpages     = {12},
-  location     = {Orlando, Florida, USA},
-  series       = {PLDI '94}
+  location     = {Orlando, Florida, USA}
+ }
+
+@inproceedings{hondavasconcelos98,
+  author       = {Honda, Kohei and Vasconcelos, Vasco Thudichum and Kubo, Makoto},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {ESOP}},
+  year         = 1998,
+  pages        = {122--138},
+  series       = {LNCS},
+  title        = {Language Primitives and Type Discipline for Structured Communication-Based Programming},
+  volume       = 1381,
+}
+
+@inproceedings{honda93,
+  author       = {Honda, Kohei},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {CONCUR}},
+  year         = 1993,
+  pages        = {509--523},
+  series       = {LNCS},
+  title        = {Types for Dyadic Interaction},
+  volume       = 715,
+}
+
+@inproceedings{takeuchihonda94,
+  author       = {Takeuchi, Kaku and Honda, Kohei and Kubo, Makoto},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {PARLE}},
+  year         = 1994,
+  pages        = {398--413},
+  series       = {LNCS},
+  title        = {An Interaction-Based Language and its Typing System},
+  volume       = 817,
+}
+
+@book{sangiorgiwalker01,
+  author       = {Sangiorgi, Davide and Walker, David},
+  publisher    = {Cambridge University Press},
+  year         = 2001,
+  title        = {The $\pi$-calculus: a Theory of Mobile Processes},
 }
