Wrote up introduction to priorities section.

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -9,6 +9,8 @@
 \let\:\undefined % amsmath conflicts with namespc
 \usepackage{namespc} % namespacing
 \usepackage{xcolor} % colour
+\usepackage{tikz} % graphs
+\usetikzlibrary{positioning}
 
 % todonotes
 \usepackage{todonotes,regexpatch}
