more on contributions

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -581,3 +581,11 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   year         = 2001,
   title        = {The $\pi$-calculus: a Theory of Mobile Processes},
 }
+
+@book{milner99,
+  author       = {Milner, Robin},
+  publisher    = {Cambridge University Press},
+  year         = {1999},
+  isbn         = {0 521 64320 1 (hc), 0 521 65869 1 (pbk)},
+  title        = {Communicating and Mobile Systems: the $\pi$-Calculus},
+}
