--- a/doc/main.bib
+++ b/doc/main.bib
@@ -589,3 +589,48 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   isbn         = {0 521 64320 1 (hc), 0 521 65869 1 (pbk)},
   title        = {Communicating and Mobile Systems: the $\pi$-Calculus},
 }
+
+@incollection{bernardidardha14,
+  doi          = {10.1007/978-3-662-45917-1_4},
+  url          = {https://doi.org/10.1007/978-3-662-45917-1_4},
+  year         = {2014},
+  publisher    = {Springer Berlin Heidelberg},
+  pages        = {51--66},
+  author       = {Giovanni Bernardi and Ornela Dardha and Simon J. Gay and Dimitrios Kouzapas},
+  title        = {On Duality Relations for Session Types},
+  booktitle    = {Trustworthy Global Computing}
+}
+
+@article{gaythiemann20,
+  doi          = {10.4204/eptcs.314.3},
+  url          = {https://doi.org/10.4204/eptcs.314.3},
+  year         = {2020},
+  month        = apr,
+  publisher    = {Open Publishing Association},
+  volume       = {314},
+  pages        = {23--33},
+  author       = {Simon J. Gay and Peter Thiemann and Vasco T. Vasconcelos},
+  title        = {Duality of Session Types: The Final Cut},
+  journal      = {Electronic Proceedings in Theoretical Computer Science}
+}
+
+@inproceedings{lindleymcbride13,
+  doi          = {10.1145/2503778.2503786},
+  url          = {https://doi.org/10.1145/2503778.2503786},
+  year         = {2013},
+  publisher    = {{ACM} Press},
+  author       = {Sam Lindley and Conor McBride},
+  title        = {Hasochism},
+  booktitle    = {Proceedings of the 2013 {ACM} {SIGPLAN} symposium on Haskell - Haskell {\textquotesingle}13}
+}
+
+@inproceedings{eisenbergvytiniotis14,
+  doi          = {10.1145/2535838.2535856},
+  url          = {https://doi.org/10.1145/2535838.2535856},
+  year         = {2014},
+  month        = jan,
+  publisher    = {{ACM}},
+  author       = {Richard A. Eisenberg and Dimitrios Vytiniotis and Simon Peyton Jones and Stephanie Weirich},
+  title        = {Closed type families with overlapping equations},
+  booktitle    = {Proceedings of the 41st {ACM} {SIGPLAN}-{SIGACT} Symposium on Principles of Programming Languages}
+}
