Minor changes to section 2, more words in section 3.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -634,3 +634,13 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   title        = {Closed type families with overlapping equations},
   booktitle    = {Proceedings of the 41st {ACM} {SIGPLAN}-{SIGACT} Symposium on Principles of Programming Languages}
 }
+
+@inproceedings{filinski94,
+  doi          = {10.1145/174675.178047},
+  url          = {https://doi.org/10.1145/174675.178047},
+  year         = {1994},
+  publisher    = {{ACM} Press},
+  author       = {Andrzej Filinski},
+  title        = {Representing monads},
+  booktitle    = {Proceedings of the 21st {ACM} {SIGPLAN}-{SIGACT} symposium on Principles of programming languages  - {POPL} {\textquotesingle}94}
+}
