Rewrote conclusion. Broke up conclusion section.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -644,3 +644,28 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   title        = {Representing monads},
   booktitle    = {Proceedings of the 21st {ACM} {SIGPLAN}-{SIGACT} symposium on Principles of programming languages  - {POPL} {\textquotesingle}94}
 }
+
+@article{brady17,
+  doi          = {10.7494/csci.2017.18.3.1413},
+  url          = {https://doi.org/10.7494/csci.2017.18.3.1413},
+  year         = {2017},
+  publisher    = {{AGHU} University of Science and Technology Press},
+  volume       = {18},
+  number       = {3},
+  pages        = {219},
+  author       = {Edwin Brady},
+  title        = {{TYPE}-{DRIVEN} {DEVELOPMENT} {OF} {CONCURRENT} {COMMUNICATING} {SYSTEMS}},
+  journal      = {Computer Science}
+}
+
+@article{brady13,
+   title       = {Idris, a general-purpose dependently typed programming language: Design and implementation},
+   volume      = {23},
+   DOI         = {10.1017/S095679681300018X},
+   number      = {5},
+   journal     = {Journal of Functional Programming},
+   publisher   = {Cambridge University Press},
+   author      = {Brady, Edwin},
+   year        = {2013},
+   pages       = {552–593}
+}
