--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -11,6 +11,8 @@
 \usepackage{xcolor} % colour
 \usepackage{tikz} % graphs
 \usetikzlibrary{positioning}
+\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
+\def\doublecheckmark{\ensuremath{\checkmark\!\!\!\!\checkmark}}
 
 % todonotes
 \usepackage{todonotes,regexpatch}
