I feel a merge conflict coming.

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -11,8 +11,9 @@
 \usepackage{xcolor} % colour
 \usepackage{tikz} % graphs
 \usetikzlibrary{positioning}
-\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
-\def\doublecheckmark{\ensuremath{\checkmark\!\!\!\!\checkmark}}
+\def\kinda{\tikz\fill[scale=0.4, opacity=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
+\def\deffo{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
+%\def\doublecheckmark{\ensuremath{\checkmark\!\!\!\!\checkmark}}
 
 % todonotes
 \usepackage{todonotes,regexpatch}
