--- a/doc/main.bib
+++ b/doc/main.bib
@@ -669,3 +669,12 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
    year        = {2013},
    pages       = {552–593}
 }
+
+@incollection{LM17:fst,
+  title={Lightweight Functional Session Types},
+  author={Lindley, Sam and Morris, J Garrett},
+  booktitle={Behavioural Types: from Theory to Tools},
+  pages={265--286},
+  year={2017},
+  publisher={River Publishers}
+}
