Added to PGV section.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -55,6 +55,7 @@
   author       = "Wen Kokke and Ornela Dardha",
   title        = "Prioritise the Best Variation",
   note         = "Manuscript submitted for publication",
+  url          = {https://wen.works/drafts/pgv.pdf},
 }
 
 @article{kokke19,
