--- a/doc/main.bib
+++ b/doc/main.bib
@@ -52,9 +52,10 @@
 }
 
 @unpublished{kokkedardha21,
-  author       = "Wen Kokke and Ornela Dardha",
+  author    = "Wen Kokke and Ornela Dardha",
   title        = "Prioritise the Best Variation",
-  note         = "Manuscript submitted for publication",
+  note       = "Manuscript submitted for publication",
+  url 		= {https://wen.works/public/drafts/pgv.pdf}
 }
 
 @article{kokke19,
