--- a/doc/main.bib
+++ b/doc/main.bib
@@ -672,10 +672,34 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
 }
 
 @incollection{LM17:fst,
-  title={Lightweight Functional Session Types},
-  author={Lindley, Sam and Morris, J Garrett},
-  booktitle={Behavioural Types: from Theory to Tools},
-  pages={265--286},
-  year={2017},
-  publisher={River Publishers}
+  title        ={Lightweight Functional Session Types},
+  author       ={Lindley, Sam and Morris, J Garrett},
+  booktitle    ={Behavioural Types: from Theory to Tools},
+  pages        ={265--286},
+  year         ={2017},
+  publisher    ={River Publishers}
+}
+
+@inproceedings{gaboardikatsumata16,
+  doi          = {10.1145/2951913.2951939},
+  url          = {https://doi.org/10.1145/2951913.2951939},
+  year         = {2016},
+  month        = sep,
+  publisher    = {{ACM}},
+  author       = {Marco Gaboardi and Shin-ya Katsumata and Dominic Orchard and Flavien Breuvart and Tarmo Uustalu},
+  title        = {Combining effects and coeffects via grading},
+  booktitle    = {Proceedings of the 21st {ACM} {SIGPLAN} International Conference on Functional Programming}
+}
+
+@article{orchardwadler20,
+  doi          = {10.4204/eptcs.317.2},
+  url          = {https://doi.org/10.4204/eptcs.317.2},
+  year         = {2020},
+  month        = may,
+  publisher    = {Open Publishing Association},
+  volume       = {317},
+  pages        = {18--38},
+  author       = {Dominic Orchard and Philip Wadler and Harley Eades},
+  title        = {Unifying graded and parameterised monads},
+  journal      = {Electronic Proceedings in Theoretical Computer Science}
 }
