--- a/doc/main.bib
+++ b/doc/main.bib
@@ -94,6 +94,21 @@
   title        = {Session types revisited},
 }
 
+@article{DardhaGS17,
+  author    = {Ornela Dardha and
+               Elena Giachino and
+               Davide Sangiorgi},
+  title     = {Session types revisited},
+  journal   = {Inf. Comput.},
+  volume    = {256},
+  pages     = {253--286},
+  year      = {2017},
+  doi       = {10.1016/j.ic.2017.06.002},
+  timestamp = {Fri, 31 Jan 2020 14:19:02 +0100},
+  biburl    = {https://dblp.org/rec/journals/iandc/DardhaGS17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{bernardyboespflug18,
   doi          = {10.1145/3158093},
   year         = {2018},
