Updated after second round of comments.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -52,9 +52,9 @@
 }
 
 @unpublished{kokkedardha21,
-  author    = "Wen Kokke and Ornela Dardha",
+  author       = "Wen Kokke and Ornela Dardha",
   title        = "Prioritise the Best Variation",
-  note         = "Manuscript submitted for publication",
+  note         = "Forthcoming",
   url          = {https://wen.works/drafts/pgv.pdf},
 }
 
