Added arXiv version.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -55,7 +55,7 @@
   author       = "Wen Kokke and Ornela Dardha",
   title        = "Prioritise the Best Variation",
   note         = "Forthcoming",
-  url          = {https://wen.works/drafts/pgv.pdf},
+  url          = {https://wen.works/public/drafts/pgv.pdf},
 }
 
 @article{kokke19,
