--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -51,5 +51,9 @@
 % references
 \usepackage{varioref}
 \usepackage{hyperref}
+\hypersetup{
+  breaklinks=true,
+}
+\usepackage{breakurl}
 \usepackage{cleveref}
 \usepackage{doi}
