--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -51,9 +51,7 @@
 % references
 \usepackage{varioref}
 \usepackage{hyperref}
-\hypersetup{
-  breaklinks=true,
-}
+\hypersetup{breaklinks=true}
 \usepackage{breakurl}
 \usepackage{cleveref}
 \usepackage{doi}
