--- a/doc/main.bib
+++ b/doc/main.bib
@@ -51,11 +51,20 @@
   doi          = {10.1145/2976002.2976018}
 }
 
-@unpublished{kokkedardha21,
-  author       = "Wen Kokke and Ornela Dardha",
-  title        = "Prioritise the Best Variation",
-  note         = "Forthcoming",
-  url          = {https://wen.works/public/drafts/pgv.pdf},
+@inproceedings{kokkedardha21,
+  author    = {Wen Kokke and
+               Ornela Dardha},
+  title     = {Prioritise the Best Variation},
+  booktitle = {Proc.\ of {FORTE}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12719},
+  pages     = {100--119},
+  publisher = {Springer},
+  year      = {2021},
+  doi       = {10.1007/978-3-030-78089-0\_6},
+  timestamp = {Mon, 14 Jun 2021 09:23:34 +0200},
+  biburl    = {https://dblp.org/rec/conf/forte/KokkeD21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{kokke19,
@@ -79,10 +88,9 @@
   booktitle    = {Proc.\ of {POPL}},
   pages        = {295--308},
   publisher    = {{ACM}},
-  yea          = {1996},
+  year         = {1996},
   doi          = {10.1145/237721.237794}
 }
-
 
 @inproceedings{dardhagiachino12,
   author       = {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
@@ -106,7 +114,8 @@
   doi       = {10.1016/j.ic.2017.06.002},
   timestamp = {Fri, 31 Jan 2020 14:19:02 +0100},
   biburl    = {https://dblp.org/rec/journals/iandc/DardhaGS17.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  note      = {Extended version of \cite{dardhagiachino12}}
 }
 
 @article{bernardyboespflug18,
