addressed minor errors as pointed out in reviews

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -33,7 +33,7 @@
   doi          = {10.1145/1411286.1411290},
   url          = {https://doi.org/10.1145/1411286.1411290},
   year         = {2008},
-  publisher    = {{ACM} },
+  publisher    = {{ACM}},
   author       = {Riccardo Pucella and Jesse A. Tov},
   title        = {Haskell session types with (almost) no class},
   booktitle    = {Proc.\ of Haskell}
@@ -56,15 +56,12 @@
                Ornela Dardha},
   title     = {Prioritise the Best Variation},
   booktitle = {Proc.\ of {FORTE}},
-  series    = {Lecture Notes in Computer Science},
+  series    = {Lect.\ Not.\ in Comput.\ Sci.},
   volume    = {12719},
   pages     = {100--119},
   publisher = {Springer},
   year      = {2021},
   doi       = {10.1007/978-3-030-78089-0\_6},
-  timestamp = {Mon, 14 Jun 2021 09:23:34 +0200},
-  biburl    = {https://dblp.org/rec/conf/forte/KokkeD21.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{kokke19,
