fixed line overflow

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -1,4 +1,5 @@
 \usepackage[english]{babel} % better typography
+\usepackage{balance}
 \usepackage[all]{foreign} % \eg, \ie, \etc
 \usepackage{textgreek} % \textpi, \textlambda
 \usepackage[inline]{enumitem} % better lists
