--- a/doc/main.bib
+++ b/doc/main.bib
@@ -64,6 +64,22 @@
   doi       = {10.1007/978-3-030-78089-0\_6},
 }
 
+@article{kokkedardha21extended,
+  author    = {Wen Kokke and
+               Ornela Dardha},
+  title     = {Prioritise the Best Variation},
+  journal   = {CoRR},
+  volume    = {abs/2103.14466},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2103.14466},
+  archivePrefix = {arXiv},
+  eprint    = {2103.14466},
+  timestamp = {Wed, 07 Apr 2021 15:31:46 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2103-14466.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  note      = {Extended version of \cite{kokkedardha21}},
+}
+
 @article{kokke19,
    title       = {{Rusty Variation}: Deadlock-free Sessions with Failure in {Rust}},
   author       = {Wen Kokke},
@@ -113,6 +129,39 @@
   biburl    = {https://dblp.org/rec/journals/iandc/DardhaGS17.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org},
   note      = {Extended version of \cite{dardhagiachino12}}
+}
+
+@book{Dardha16,
+  author    = {Ornela Dardha},
+  title     = {Type Systems for Distributed Programs: Components and Sessions},
+  series    = {Atlantis Studies in Computing},
+  volume    = {7},
+  publisher = {Springer / Atlantis Press},
+  year      = {2016},
+  url       = {https://doi.org/10.2991/978-94-6239-204-5},
+  doi       = {10.2991/978-94-6239-204-5},
+  isbn      = {978-94-6239-203-8},
+  timestamp = {Tue, 30 May 2017 18:04:20 +0200},
+  biburl    = {https://dblp.org/rec/series/atlantissc/Dardha16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{FKDLM21,
+  author    = {Simon Fowler and
+               Wen Kokke and
+               Ornela Dardha and
+               Sam Lindley and
+               J. Garrett Morris},
+  title     = {Separating Sessions Smoothly},
+  journal   = {CoRR},
+  volume    = {abs/2105.08996},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2105.08996},
+  archivePrefix = {arXiv},
+  eprint    = {2105.08996},
+  timestamp = {Mon, 31 May 2021 16:16:57 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2105-08996.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{bernardyboespflug18,
