--- a/doc/main.bib
+++ b/doc/main.bib
@@ -725,7 +725,7 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   number       = {3},
   pages        = {219},
   author       = {Edwin Brady},
-  title        = {{TYPE}-{DRIVEN} {DEVELOPMENT} {OF} {CONCURRENT} {COMMUNICATING} {SYSTEMS}},
+  title        = {{Type}-{Driven} {Development} {of} {Concurrent} {Communicating} {Systems}},
   journal      = {Computer Science}
 }
 
@@ -772,4 +772,10 @@ opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
   author       = {Dominic Orchard and Philip Wadler and Harley Eades},
   title        = {Unifying graded and parameterised monads},
   journal      = {Electronic Proceedings in Theoretical Computer Science}
+}
+
+@misc{lhs2tex,
+  title = {lhs2tex: Preprocessor for typesetting Haskell sources with LaTeX},
+  howpublished = {\url{https://hackage.haskell.org/package/lhs2tex}},
+  year   = {Accessed: 2021-08-06}
 }
